# domains-terminal

./: .gitignore  AGENT.md  AI_CONTEXT.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
docs/: architecture.md  database.md  features.md  pipeline.md  providers.md
docs/decisions/: 001-use-sqlite.md  002-cli-first.md  003-agent-first-json.md
domains_terminal/: __init__.py  cli.py  models.py  storage.py  utils.py
domains_terminal/core/: appraise.py  availability.py  filter.py  scoring.py
domains_terminal/providers/: dropcatch.py  expireddomains.py  namebio.py  signa.py
tests/: conftest.py  test_appraise.py  test_availability.py  test_filter.py  test_scoring.py  test_signa.py
