[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "domains-terminal"
version = "0.1.0"
description = "Domains Terminal — Bloomberg Terminal for domain flipping. Scrape, score, appraise, and acquire premium domains."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Domains Terminal Contributors" }
]
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "rich>=13.0",
    "pydantic>=2.0",
    "aiohttp>=3.8",
    "httpx>=0.24",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
]

[project.scripts]
domains-terminal = "domains_terminal.cli:main"
dt = "domains_terminal.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1.0",
]
